--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "instagram-url-direct",
+  "name": "wf-instagram-url-direct",
   "version": "2.0.7",
   "description": "Get direct url to download from Instagram media links",
   "main": "dist/instagram.js",
@@ -22,7 +22,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/victorsouzaleal/instagram-direct-url.git"
+    "url": "git+https://github.com/webfork/instagram-direct-url.git"
   },
   "keywords": [
     "instagram",
@@ -39,9 +39,9 @@
   "author": "victorsouzaleal <victorsouzaleal@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/victorsouzaleal/instagram-direct-url/issues"
+    "url": "https://github.com/webfork/instagram-direct-url/issues"
   },
-  "homepage": "https://github.com/victorsouzaleal/instagram-direct-url#readme",
+  "homepage": "https://github.com/webfork/instagram-direct-url#readme",
   "dependencies": {
     "axios": "^1.7.7",
     "qs": "^6.13.0"
